--- a/outfitliker-frontend/style.css
+++ b/outfitliker-frontend/style.css
@@ -42,7 +42,6 @@ body {
     padding: 5vh;
     grid-column: 3;
     grid-row: 3;
-    background-color: rgb(250, 230, 242);
     border-radius: 10px;
     font-family: 'Lekton', sans-serif;
 }
@@ -66,7 +65,7 @@ body {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    background-color: rgb(117, 226, 190);
+    background-color: rgb(233, 233, 233);
     animation: enter 0.25s ease-out;
     -webkit-box-shadow: var(--box-shadow);
     -moz-box-shadow: var(--box-shadow);
@@ -90,7 +89,7 @@ flex: 0 1 calc(33% - 1em);
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  background-color: rgb(117, 226, 190);
+  background-color: rgb(233, 233, 233);
   animation: enter 0.25s ease-out;
   -webkit-box-shadow: var(--box-shadow);
   -moz-box-shadow: var(--box-shadow);
@@ -124,4 +123,5 @@ flex: 0 1 calc(33% - 1em);
     font-size: 16px;
     /* margin: 1em 3rem; */
     width: 250px;
+    align-content: center;
 }
